--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "swiper": "^6.0.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -38,8 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "theme": {
-    "primary-color": "#000000"
   }
 }
