--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-idle-timer": "^4.6.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "swiper": "^6.0.2",
