--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -14,6 +14,9 @@ torch = {index = "pytorch", version = "==1.5.1+cpu"}
 torchvision = {index = "pytorch", version = "==0.6.1+cpu"}
 flask = "*"
 flask-pymongo = "*"
+python-dotenv = "*"
+pymongo = {extras = ["srv"], version = "*"}
+google-search-results = "*"
 
 [dev-packages]
 
