--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.16.13",
     "axios": "^0.22.0",
     "google-maps-react": "^2.0.6",
+    "jquery": "^3.6.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
